--- a/.github/taskfiles/docs.yml
+++ b/.github/taskfiles/docs.yml
@@ -14,7 +14,7 @@ tasks:
       - |
         # Find source folder
         SOURCE_FOLDER="src/$(find src -mindepth 1 -maxdepth 1 -type d -not -path '*/\.*' | head -1 | sed 's|^src/||')"
-
+        
         if [ -z "$SOURCE_FOLDER" ] || [ -z "{{.TESTS_FOLDER}}" ]; then
           printf "${YELLOW}[WARN] No valid source folder structure found, skipping tests${RESET}\n"
         else
@@ -30,13 +30,21 @@ tasks:
       - |
         if [ -f "pyproject.toml" ]; then
           printf "${BLUE}[INFO] Building documentation...${RESET}\n"
-          SOURCE_FOLDER=src/$(find src -mindepth 1 -maxdepth 1 -type d -not -path '*/\.*' | head -1)
-          uv pip install pdoc
-          uv run pdoc -o _pdoc "$SOURCE_FOLDER"
+          if [ -d "src" ]; then
+            SOURCE_FOLDER=$(LC_ALL=C find src -mindepth 1 -maxdepth 1 -type d -not -path '*/\.*' | sort | head -1)
+            if [ -z "$SOURCE_FOLDER" ]; then
+              printf "${YELLOW}[WARN] src/ exists but contains no top-level packages, skipping docs${RESET}\n"
+            else
+              uv pip install pdoc
+              uv run pdoc -o _pdoc "$SOURCE_FOLDER"
+            fi
+          else
+            printf "${YELLOW}[WARN] No src/ directory found, skipping docs${RESET}\n"
+          fi
         else
           printf "${YELLOW}[WARN] No pyproject.toml found, skipping docs${RESET}\n"
         fi
-
+  
   marimushka:
     desc: Export Marimo notebooks to HTML
     cmds:
@@ -47,7 +55,7 @@ tasks:
           printf "${YELLOW}[WARN] Directory '{{.MARIMO_FOLDER}}' does not exist. Skipping marimushka.${RESET}\n"
         else
           mkdir -p _marimushka
-          py_files=$(find "{{.MARIMO_FOLDER}}" -name "*.py" | tr '\n' ' ')
+          py_files=$(find "{{.MARIMO_FOLDER}}" -maxdepth 1 -name "*.py" | tr '\n' ' ')
           if [ -z "$py_files" ]; then
             printf "${YELLOW}[WARN] No Python files found in '{{.MARIMO_FOLDER}}'.${RESET}\n"
             echo "<html><head><title>Marimo Notebooks</title></head><body><h1>Marimo Notebooks</h1><p>No notebooks found.</p></body></html>" > _marimushka/index.html
@@ -71,7 +79,7 @@ tasks:
             touch _marimushka/.nojekyll
           fi
         fi
-
+  
   book:
     desc: Build the companion book with test results and notebooks
     cmds:
@@ -90,7 +98,7 @@ tasks:
         else
           echo '{}' > _book/links.json
         fi
-
+        
         printf "${BLUE}[INFO] Copy coverage report...${RESET}\n"
         if [ -d _tests/html-coverage ] && [ "$(ls -A _tests/html-coverage 2>/dev/null)" ]; then
           mkdir -p _book/tests/html-coverage
@@ -99,7 +107,7 @@ tasks:
         else
           printf "${YELLOW}[WARN] No coverage report found or directory is empty${RESET}\n"
         fi
-
+        
         printf "${BLUE}[INFO] Copy test report...${RESET}\n"
         if [ -d _tests/html-report ] && [ "$(ls -A _tests/html-report 2>/dev/null)" ]; then
           mkdir -p _book/tests/html-report
@@ -108,7 +116,7 @@ tasks:
         else
           printf "${YELLOW}[WARN] No test report found or directory is empty${RESET}\n"
         fi
-
+        
         printf "${BLUE}[INFO] Copy notebooks...${RESET}\n"
         if [ -d _marimushka ] && [ "$(ls -A _marimushka 2>/dev/null)" ]; then
           mkdir -p _book/marimushka
@@ -118,14 +126,14 @@ tasks:
         else
           printf "${YELLOW}[WARN] No notebooks found or directory is empty${RESET}\n"
         fi
-
+        
         printf "${BLUE}[INFO] Generated links.json:${RESET}\n"
         cat _book/links.json
-
+        
         uvx minibook@v0.0.16 --title "{{.BOOK_TITLE}}" --subtitle "{{.BOOK_SUBTITLE}}" --links "$(cat _book/links.json)" --output "_book"
-
+        
         touch "_book/.nojekyll"
-
+  
   marimo:
     desc: Start a Marimo server
     cmds:
